--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.2",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
     "lodash.debounce": "^4.0.8",
+    "node-sass": "^7.0.1",
     "qs": "^6.10.5",
     "react": "^18.1.0",
     "react-content-loader": "^6.2.0",
@@ -16,8 +21,9 @@
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.52.2",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
